--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>My first website</h1>
-    <p>Look mama! I can push github!</p>
+    <p>feeling happy now</p>
+    <p>I am a ghost</p>
 </body>
 </html>
